# rustyCoffy

./: .env  .gitignore  BREWING_SERVICE_DOCUMENTATION.md  Cargo.toml  DATABASE_SCHEMA.md  DATABASE_SETUP.md  DEVBOX_FIXES.md  DEVBOX_GUIDE.md  Dioxus.toml  TASK_2_COMPLETION.md  TASK_4_COMPLETION.md  TASK_4_FINAL_COMPLETION.md  TASK_4_FINAL_RESOLUTION.md  TASK_4_FINAL_STATUS.md  TASK_4_ULTIMATE_SUCCESS.md  TASK_5_COMPLETION.md  TASK_6_COMPLETION.md  TASK_6_FINAL_SUMMARY.md  TASK_6_REQUIREMENTS_VERIFICATION.md  TASK_7_COMPLETION.md  TASK_8_COMPLETION.md  devbox.json  index.html  run_mutation_tests.sh  setup-dev.sh  test_constraints.sql  test_optimization_stats.rs  test_service.sh  verify_schema.sql  verify_task5.sh  verify_task6.sh  verify_task7.sh  verify_task9.sh
.kiro/specs/coffee-brewing-tracker/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
assets/: style.css
migrations/2024-01-01-000001_create_enums/: down.sql  up.sql
migrations/2024-01-01-000002_create_coffee_beans/: down.sql  up.sql
migrations/2024-01-01-000003_create_grinders/: down.sql  up.sql
migrations/2024-01-01-000004_create_brewing_sessions/: down.sql  up.sql
mutants.out/: lock.json  mutants.json  outcomes.json
src/: lib.rs  main.rs  schema.rs  validation.rs
src/models/: mod.rs  tests.rs
src/services/: brewing_service.rs  brewing_service_integration_tests.rs  brewing_service_tests.rs  database.rs  mod.rs  optimization_engine.rs
src/ui/: app.rs  mod.rs  state.rs
src/ui/components/: mod.rs  navigation.rs
src/ui/pages/: dashboard.rs  mod.rs  (+5 more)
